# Game_Engine

./: .gitignore
GAME/: CMakeLists.txt
GAME/ARC/: ArcApp.cpp  ArcApp.h  ArcUtil.h  CMakeLists.txt
GAME/ARC/include/: Arc.h
GAME/ARC/src/: ArcApp.cpp  ArcApp.h  ArcEvents.cpp  ArcEvents.h  ArcKeys.h  ArcUtil.h  GLFWimplementation.cpp  GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
GAME/ARC/src/GLFWCode/: GLFWimplementation.cpp  GLFWimplementation.h
GAME/ARC/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
GAME/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
GAME/S23_Game/: CMakeLists.txt
GAME/S23_Game/src/: main  main.cpp
GAME/glad/include/glad/: glad.h
GAME/glad/src/: glad.c
Week_1/: README.md
Weekly_Work/Week_2/: README.md
Weekly_Work/Week_3/: README.md
Weekly_Work/Week_4/: README.md
Weekly_Work/Week_7/: README.md
